--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@auth/prisma-adapter": "^2.4.2",
     "@prisma/client": "^5.19.1",
     "axios": "^1.7.7",
+    "date-fns": "^3.6.0",
     "next": "14.2.11",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-textarea-autosize": "^8.5.3"
+    "react-textarea-autosize": "^8.5.3",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
